Some modifications for PMD/FB