@@ -29,9 +29,9 @@ import kieker.analysis.exception.AnalysisConfigurationException;
 import kieker.analysis.plugin.filter.forward.ListCollectionFilter;
 import kieker.analysis.plugin.reader.list.ListReader;
 import kieker.common.configuration.Configuration;
+import kieker.common.record.opad.ForecastMeasurementPair;
+import kieker.common.record.opad.NamedDoubleTimeSeriesPoint;
 import kieker.tools.opad.filter.ForecastingFilter;
-import kieker.tools.opad.record.ForecastMeasurementPair;
-import kieker.tools.opad.record.NamedDoubleTimeSeriesPoint;
 
 import kieker.test.common.junit.AbstractKiekerTest;
 
@@ -140,19 +140,19 @@ public class ForecastingFilterTest extends AbstractKiekerTest {
 
 		Assert.assertEquals(7, this.sinkPlugin.getList().size());
 		// Expected: 0.3 - 0.3 (dummy) Application A
-		Assert.assertEquals(new Double(0.3), this.sinkPlugin.getList().get(0).getForecasted());
+		Assert.assertEquals(Double.valueOf(0.3), this.sinkPlugin.getList().get(0).getForecasted());
 		// Expected: 0.4 - 0.4 (dummy) Application B
-		Assert.assertEquals(new Double(0.4), this.sinkPlugin.getList().get(1).getForecasted());
+		Assert.assertEquals(Double.valueOf(0.4), this.sinkPlugin.getList().get(1).getForecasted());
 		// Expected: (0.3 + 0.5) / 2 = 0.4 Application A
-		Assert.assertEquals(new Double(0.4), this.sinkPlugin.getList().get(2).getForecasted());
+		Assert.assertEquals(Double.valueOf(0.4), this.sinkPlugin.getList().get(2).getForecasted());
 		// Expected: 0.5 = 0.5 (dummy) Application C
-		Assert.assertEquals(new Double(0.5), this.sinkPlugin.getList().get(3).getForecasted());
+		Assert.assertEquals(Double.valueOf(0.5), this.sinkPlugin.getList().get(3).getForecasted());
 		// Expected: (0.4 + 0.3) / 2 = 0.35 Application B
-		Assert.assertEquals(new Double(0.35), this.sinkPlugin.getList().get(4).getForecasted());
+		Assert.assertEquals(Double.valueOf(0.35), this.sinkPlugin.getList().get(4).getForecasted());
 		// Expected: (0.3 + 0.5 + 0.4) / 3 = 0.4 Application A
-		Assert.assertEquals(new Double(0.4), this.sinkPlugin.getList().get(5).getForecasted());
+		Assert.assertEquals(Double.valueOf(0.4), this.sinkPlugin.getList().get(5).getForecasted());
 		// Expected: (0.4 + 0.3 + 0.5) / 3 = 0.4 Application B
-		Assert.assertEquals(new Double(0.4), this.sinkPlugin.getList().get(6).getForecasted());
+		Assert.assertEquals(Double.valueOf(0.4), this.sinkPlugin.getList().get(6).getForecasted());
 
 	}
 
